Fix display overflow bug

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@
     justify-content: end;
     align-items: end;
     padding: 1rem 1rem;
+    overflow: hidden;
 }
 
 .trackerDisplay {
@@ -42,12 +43,20 @@
     word-break: break-all;
     margin-bottom: 20px;
     color: orangered;
+    display: flex;
+    align-items: end;
+    justify-content: end;
+    text-align: end;
 }
 
 .mainDisplay {
-    font-size: 36px;
-    word-break: break-all;
-    height: 53px;
+    font-size: 30px;
+    
+    height: 60px;
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    text-align: end;
 }
 
 .buttons {
